<resources>
    <string name="app_name">Hello</string>
    <string name="text1" translatable="false">Hello</string>
    <string name="hint" translatable="false">InputRMB</string>
    <string name="text3">RMB conversion</string>
    <string name="text4" translatable="false">ExchangeRate</string>
    <string name="btn1">dollar</string>
    <string name="btn2">euro</string>
    <string name="btn3">won</string>
    <string name="btn_open" translatable="false">config</string>
    <string name="btn_save" translatable="false">save</string>
    <string name="menu_1" translatable="false">Setting</string>
    <string name="menu_2">Open</string>
    <string name="menu_3">Exit</string>
    <string name="btn_openlist">list</string>
    <string name="btn_listdelete">delete</string>
    <string name="homeframent">HomeFrament</string>
    <string name="funcfragment">FuncFragment</string>
    <string name="settingfragment">SettingFragment</string>
    <string name="btn_fragme">Fragment</string>
    <string name="first_label">First Page</string>
    <string name="two_label">Two Page</string>
    <string name="three_label">Three Page</string>
</resources>