<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/text4"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/txt_dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/txt_euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/txt_won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="45dp"
        android:onClick="btn_save"
        android:text="@string/btn_save"
        android:textSize="22sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="36dp"
        android:id="@+id/mylist"
        android:textSize="22sp"
        />

    <TextView
        android:id="@+id/nodata"
        android:text="No Data"
        android:gravity="center"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textSize="25sp"
        />

</LinearLayout>